// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modus-wc-progress should render indeterminate state 1`] = `
<modus-wc-progress class="modus-wc-progress-container" indeterminate="" value="0">
  <!---->
  <progress aria-hidden="true" aria-label="Custom Progress Bar" class="modus-wc-progress modus-wc-w-full"></progress>
</modus-wc-progress>
`;

exports[`modus-wc-progress should render label 1`] = `
<modus-wc-progress class="modus-wc-progress-container" label="Loading..." value="0">
  <!---->
  <progress aria-label="Custom Progress Bar" aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" class="modus-wc-progress modus-wc-w-full" max="100" value="0"></progress>
  <span class="modus-wc-progress-label">
    Loading...
  </span>
</modus-wc-progress>
`;

exports[`modus-wc-progress should render with custom props 1`] = `
<modus-wc-progress class="modus-wc-progress-container" custom-class="test-class" indeterminate="" max="50" value="25" variant="radial">
  <!---->
  <div aria-hidden="true" aria-label="Custom Progress Bar" class="modus-wc-radial-progress modus-wc-radial-progress--indeterminate test-class" role="progressbar" style="--value: 50;"></div>
</modus-wc-progress>
`;

exports[`modus-wc-progress should render with default props 1`] = `
<modus-wc-progress class="modus-wc-progress-container" value="0">
  <!---->
  <progress aria-label="Default Progress Bar" aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" class="modus-wc-progress modus-wc-w-full" max="100" value="0"></progress>
</modus-wc-progress>
`;
